fixed title on mobile

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -379,50 +379,14 @@ glove {
     // position: fixed;
     width: $gloveMobileMainW;
     height: $gloveMobileMainH;
-    h1, i {
-      // position: absolute;
-    }
+    .buttons { display: none; }
 
     &.inactive {
       display: none;
     }
     &.active {
-      height: $gloveMobileBoxH;
-      top: 0;
-      .title, img {
-        display: block;
-        max-width: 100%;
-        width: auto;
-        height: auto;
-        max-height: 100%;
-      }
-      .title {
-        text-align: center;
-        position: absolute;
-        width: 100%;
-        margin-top: 5%;
-        // margin-left: 5%;
-        // top: $gloveMobileBoxH + 5vh;
-        span {
-          font-size: 7vw;
-        }
-        .buttons {
-          display: none;
-          text-align: left;
-          position: absolute;
-          top: 50%;
-          left: 3%;
-          transform: translateY(-50%);
-        }
-      }
+      .title span { font-size: 2rem; }
       img { display: none; }
-      &[name="Statement"], &[name="Bio"] {
-        // img { transform: translate(-30%, -50%); }
-        img { left: 0; }
-      }
-      &[name="Contact"], &[name="Works"] {
-        img { right: 0; }
-      }
     }
     &.home {
       width: 100vw;
